

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.finsight.istio.fundamental";
option java_outer_classname = "GreetingProto";
option objc_class_prefix = "HLW";

package greeting;

service GreeterService {
  // Sends a greeting. Original method.
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting. New method.
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
